# Dia_Tide

./: .gitignore  README.md  pyproject.toml
src/diatide/: __main__.py
