[tool.poetry]
name = "diatide"
version = "0.3.1"
description = "Upload Diasend exports to Tidepool"
authors = ["j666gak <j666gak@github.com>"]
readme = "README.md"
packages = [
    { include="diatide", from="src" }
]

[tool.poetry.scripts]
diatide = "diatide.__main__:main"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
pytz = "^2022.7.1"
xlrd = "^2.0.1"
pyyaml = "^6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
